# prova-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: agent_system_prompt.md  claude_desktop_config.json
src/prova_mcp/: __init__.py  __main__.py  server.py
