[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prova-mcp"
version = "0.1.0"
description = "MCP server for Prova — let any AI agent verify its own reasoning before answering."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Kian Quinlan", email = "kian@cobound.dev"}]
keywords = [
    "mcp", "model-context-protocol", "anthropic", "claude",
    "reasoning", "verification", "AI-safety", "lean4", "prova"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27.0",
]

[project.scripts]
prova-mcp = "prova_mcp.__main__:main"

[project.urls]
Homepage = "https://prova.cobound.dev"
Documentation = "https://prova.cobound.dev/docs"
Source = "https://github.com/insinuateai/prova-mcp"

[tool.setuptools.packages.find]
where = ["src"]
